--- a/user/templates/user/acc_active_email.html
+++ b/user/templates/user/acc_active_email.html
@@ -3,6 +3,9 @@
   <body>
     <p>Hi {{ user.username }},</p>
     <p>Please click on the link below to confirm your registration:</p>
-    <a href="{{ domain }}{% url 'activate' uidb64=uidb64 token=token %}">Activate your account</a>
+    <a
+      href="http://{{ domain }}activation-complete?uid={{ uidb64 }}&token={{ token }}"
+      >Activate your account</a
+    >
   </body>
 </html>
